# bevy_editor_pls

./: Cargo.toml
crates/bevy_editor_pls_core/src/: editor.rs  editor_window.rs
crates/bevy_editor_pls_default_windows/: Cargo.toml
crates/bevy_editor_pls_default_windows/src/hierarchy/: mod.rs  picking.rs
