[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
description = "In-App editor tools for bevy apps"
edition     = "2021"
license     = "MIT OR Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/jakobhellermann/bevy_editor_pls"
version     = "0.9.0"

[workspace.dependencies]
bevy_editor_pls                 = { version = "0.9.0", path = "crates/bevy_editor_pls" }
bevy_editor_pls_core            = { version = "0.9.0", path = "crates/bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { version = "0.9.0", path = "crates/bevy_editor_pls_default_windows" }

bevy_mod_picking = { version = "0.18", features = ["backend_egui"] }

bevy-inspector-egui = "0.23"
egui                = "0.26"
egui-gizmo          = "0.16"
egui_dock           = "0.11"

[profile.dev.package."*"]
opt-level = 2
